--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 node_modules
-/dist
+#/dist
 
 # local env files
 .env.local
 .env.*.local
+vue.config.js
+.gitignore
 
 # Log files
 npm-debug.log*
